# ThesisPulseAI

./: .gitignore  .gitleaks.toml  Directory.Build.props  README.md  ThesisPulseAI.sln
ai-python/: pyproject.toml
ai-python/app/: __init__.py  main.py  smc_main.py
ai-python/app/api/: __init__.py
ai-python/app/backtesting/: __init__.py
ai-python/app/confirmation/: __init__.py  calculator.py  definitions.py  models.py  service.py  sql_store.py  store.py
ai-python/app/contracts/: __init__.py
ai-python/app/core/: __init__.py  settings.py
ai-python/app/directional/: __init__.py  calculator.py  definitions.py  models.py  service.py  sql_store.py  store.py
ai-python/app/engines/: __init__.py
ai-python/app/features/: __init__.py  calculator.py  definitions.py  models.py  service.py  sql_store.py  store.py
ai-python/app/fusion/: __init__.py
ai-python/app/learning/: __init__.py
ai-python/app/liquidity_derivatives/: __init__.py  calculator.py  config.py  definitions.py  models.py  (+3 more)
ai-python/tests/: test_confirmation_settings.py  test_directional_intelligence.py  test_feature_factory.py  test_health.py  test_liquidity_derivatives_engine.py  test_market_regime.py  test_multi_timeframe_confirmation.py  test_option_chain_calculator.py  test_option_chain_router.py  test_option_chain_sql_config.py  test_option_chain_sql_lineage.py  test_option_chain_sql_schema.py  test_option_chain_store.py  test_order_flow_engine.py  test_smart_money_engine.py  test_smc_engine.py  test_workflow_evidence.py  test_workflow_liquidity_derivatives.py  test_workflow_option_chain.py  test_workflow_smart_money.py
(+786 files in other folders)
