[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "thesispulse-ai"
version = "0.2.0"
description = "ThesisPulse AI intelligence and analytics platform"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi[standard]==0.138.2",
  "pyodbc>=5.1,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "httpx>=0.28,<1",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
