[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "thesispulse-ai"
version = "0.5.0"
description = "ThesisPulse AI intelligence and analytics platform"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi[standard]==0.138.2",
  "pyodbc>=5.1,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "httpx>=0.28,<1",
  "ruff==0.15.20",
  "pip-audit==2.10.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
required-version = "==0.15.20"
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/smart_money/calculator.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
